--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 	<!-- JQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<!--index.js-->
+	<script src="js/index.js"></script>
 	<!--index.css-->
 	<link rel="stylesheet" href="css/index.css">
 </head>
@@ -19,21 +21,20 @@
 		<div class="card my-5">
 			<div class="card-body">
 				<div class="row m-3">
-					<div class="col-md-6 bg-login-image">
-						<div class="col-md-6">
-							<h1 class="h4 text-gray-900 my-3">Bienvenido</h1>
-							<form id="form-login">
-								<div class="mb-3">
-									<input type="text" class="form-control" id="usuario" placeholder="Usuario" required>
-								</div>
-								<div class="mb-3">
-									<input type="password" class="form-control" id="contrasena" placeholder="Contraseña" required>
-								</div>
-								<hr>
-								<button type="submit" class="btn btn-primary btn-block" id="btnEntrar">Entrar</button>
-								<hr>
-							</form>
-						</div>
+					<div class="col-md-6 bg-login-image"></div>
+					<div class="col-md-6">
+						<h1 class="h4 text-gray-900 my-3">Bienvenido</h1>
+						<form id="form-login">
+							<div class="mb-3">
+								<input type="text" class="form-control" id="usuario" placeholder="Usuario" required>
+							</div>
+							<div class="mb-3">
+								<input type="password" class="form-control" id="contrasena" placeholder="Contraseña" required>
+							</div>
+							<hr>
+							<button type="submit" class="btn btn-primary btn-block" id="btnEntrar">Entrar</button>
+							<hr>
+						</form>
 					</div>
 					<a href="register.html">¿Aún no tienes cuenta? ¡Regístrate!</a>
 					<div id="login-error" class="alert alert-danger d-none" role="alert">
