--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Index - Hello World</title>
+	<title>Registro de usuario</title>
 	<!-- CSS only -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 	<!-- JavaScript Bundle with Popper -->
@@ -48,13 +48,23 @@
 					</div>
 					<div class="mb-3">
 						<label for="input-email">Correo electronico:</label>
-						<input type="email" class="form-control" id="input-email" placeholder="Apellido" required>
+						<input type="email" class="form-control" id="input-email" placeholder="Email" required>
 					</div>
 					<div class="mb-3">
 						<label for="input-saldo">Saldo:</label>
-						<input type="text" class="form-control" id="input-saldo" placeholder="Saldo" required>
+						<input type="number" class="form-control" id="input-saldo" placeholder="Saldo" required min="0" max="100000" value="0">
 					</div>
+					<div class="mb-3">
+						<div class="form-check">
+							<input type="checkbox" class="form-check-input" id="input-premium">
+							<label for="input-premium" class="form-check-label">Premium</label>
+						</div>
+					</div>
+					<input type="submit" class="btn btn-primary" id="register-btn" value="Registrar Usuario"/>
 				</form>
+				<a href="index.html">Ya tienes cuenta?, inicia sesión</a>
+				<div id="register-error" class="alert alert-danger d-none" role="alert">
+				</div>
 			</div>
 		</div>
 	</main>
