feat: crear servlet para listar peliculas

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -47,7 +47,7 @@
 			<th scope="col">#</th>
 			<th scope="col">Titulo</th>
 			<th scope="col" id="ordernar-genero" data-bs-toggle="tooltip" data-popper-placement="top" title="Ordernar por genero">
-				Genero<i class="fas fa-sort" id="icono-ordenar"></i>
+				Genero<i class="fa fa-sort" id="icono-ordenar"></i>
 			</th>
 			<th scope="col">Autor</th>
 			<th scope="col">Copias disponibles</th>
