--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Home</title>
-		<!-- CSS only -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-		<!-- JavaScript Bundle with Popper -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-		<!-- JQuery -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-		<!--index.js-->
-		<script src="js/index.js"></script>
-		<!--main.js-->
-		<script src="js/main.js"></script>
-		<!--index.css-->
-		<link rel="stylesheet" href="css/index.css">
-		<!--main.css-->
-		<link rel="stylesheet" href="css/main.css">
-		<!--font-awesome-->
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-	</head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Home</title>
+	<!-- CSS only -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+	<!-- JavaScript Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+	<!-- JQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<!--main.js-->
+	<script src="js/main.js"></script>
+	<!--index.css-->
+	<link rel="stylesheet" href="css/index.css">
+	<!--main.css-->
+	<link rel="stylesheet" href="css/main.css">
+	<!--font-awesome-->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
@@ -43,49 +39,22 @@
 <main class="p-4 d-flex justify-content-center">
 	<table class="table">
 		<thead class="table-dark">
-		<tr>
-			<th scope="col">#</th>
-			<th scope="col">Titulo</th>
-			<th scope="col" id="ordernar-genero" data-bs-toggle="tooltip" data-popper-placement="top" title="Ordernar por genero">
-				Genero<i class="fa fa-sort" id="icono-ordenar"></i>
-			</th>
-			<th scope="col">Autor</th>
-			<th scope="col">Copias disponibles</th>
-			<th scope="col">Novedad</th>
-			<th scope="col">Precio</th>
-			<th scope="col">Reserva</th>
-		</tr>
+			<tr>
+				<th scope="col">#</th>
+				<th scope="col">Titulo</th>
+				<th scope="col" id="ordernar-genero" data-bs-toggle="tooltip" data-popper-placement="top" data-bs-title="Ordernar por genero">
+					Genero
+					<span><i class="fa fa-sort" id="icono-ordenar"></i></span>
+				</th>
+				<th scope="col">Autor</th>
+				<th scope="col">Copias disponibles</th>
+				<th scope="col">Novedad</th>
+				<th scope="col">Precio</th>
+				<th scope="col">Reserva</th>
+			</tr>
 		</thead>
 		<tbody id="peliculas-tbody">
-		<tr>
-			<th scope="row">1</th>
-			<td>Mark</td>
-			<td>Otto</td>
-			<td>@mdo</td>
-			<td>@mdo</td>
-			<td>@mdo</td>
-			<td>@mdo</td>
-			<td>@mdo</td>
-		</tr>
-		<tr>
-			<th scope="row">2</th>
-			<td>Jacob</td>
-			<td>Thornton</td>
-			<td>@fat</td>
-			<td>@mdo</td>
-			<td>@mdo</td>
-			<td>@mdo</td>
-			<td>@mdo</td>
-		</tr>
-		<tr>
-			<th scope="row">3</th>
-			<td colspan="2">Larry the Bird</td>
-			<td>@twitter</td>
-			<td>@mdo</td>
-			<td>@mdo</td>
-			<td>@mdo</td>
-			<td>@mdo</td>
-		</tr>
+		
 		</tbody>
 	</table>
 </main>
