--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -56,7 +56,7 @@
 					</div>
 					<div class="mb-3">
 						<div class="form-check">
-							<input type="checkbox" class="form-check-input" id="input-premium">
+							<input type="checkbox" class="form-check-input" id="input-premium" disabled checked>
 							<label for="input-premium" class="form-check-label">Premium</label>
 						</div>
 					</div>
