--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -30,7 +30,7 @@
 				<span id="ajustes">Ajustes</span>
 			</button>
 			<ul class="dropdown-menu" id="main-menu">
-				<li><a href="" id="mi-perfil-btn" class="dropdown-item">Mi perfil</a></li>
+				<li><a href="profile.html" id="mi-perfil-btn" class="dropdown-item">Mi perfil</a></li>
 				<li><a href="index.html" id="salir-btn" class="dropdown-item">Salir</a></li>
 			</ul>
 		</div>
