--- a/src/main/webapp/profile.html
+++ b/src/main/webapp/profile.html
@@ -120,10 +120,8 @@
 					Eliminar una cuenta es una acción que no se puede restaurar. ¿Está seguro?
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary"
-					        data-bs-dismiss="modal">Cancelar</button>
-					<button type="button" class="btn btn-danger"
-					        id="aceptar-eliminar-cuenta-btn">Eliminar cuenta</button>
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+					<button type="button" class="btn btn-danger" id="aceptar-eliminar-cuenta-btn">Eliminar cuenta</button>
 				</div>
 			</div>
 		</div>
